--- a/Copperscript/CopperLicht/CopperLicht.csproj
+++ b/Copperscript/CopperLicht/CopperLicht.csproj
@@ -66,6 +66,11 @@
       <HintPath>..\packages\ScriptSharp.0.7.5.1\tools\ScriptSharp.Build.dll</HintPath>
     </Reference>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="js\copperlicht.js">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="AfterBuild">
     <Copy SourceFiles="@(ScriptInfo)" DestinationFiles="$(OutputPath)$(AssemblyName).txt" />
