Added: Tutorial2 project (Debug only)

--- a/Copperscript/packages/repositories.config
+++ b/Copperscript/packages/repositories.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\CopperLicht\packages.config" />
+  <repository path="..\Tutorial2\packages.config" />
 </repositories>
