--- a/Copperscript/packages/repositories.config
+++ b/Copperscript/packages/repositories.config
@@ -2,4 +2,5 @@
 <repositories>
   <repository path="..\CopperLicht\packages.config" />
   <repository path="..\Tutorial2\packages.config" />
+  <repository path="..\Tutorial3\packages.config" />
 </repositories>
