--- a/Copperscript/packages/repositories.config
+++ b/Copperscript/packages/repositories.config
@@ -3,4 +3,5 @@
   <repository path="..\CopperLicht\packages.config" />
   <repository path="..\Tutorial2\packages.config" />
   <repository path="..\Tutorial3\packages.config" />
+  <repository path="..\Tutorial4\packages.config" />
 </repositories>
