Added: Tutorial5 with custom shaders (Debug only)

--- a/Copperscript/packages/repositories.config
+++ b/Copperscript/packages/repositories.config
@@ -4,4 +4,5 @@
   <repository path="..\Tutorial2\packages.config" />
   <repository path="..\Tutorial3\packages.config" />
   <repository path="..\Tutorial4\packages.config" />
+  <repository path="..\Tutorial5\packages.config" />
 </repositories>
