Added: Move and Rotate speed fields to AnimatorCameraFPS wrapper

--- a/Copperscript/packages/repositories.config
+++ b/Copperscript/packages/repositories.config
@@ -5,4 +5,5 @@
   <repository path="..\Tutorial3\packages.config" />
   <repository path="..\Tutorial4\packages.config" />
   <repository path="..\Tutorial5\packages.config" />
+  <repository path="..\Tutorial6\packages.config" />
 </repositories>
